--- a/mothmanmarket/package.json
+++ b/mothmanmarket/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "@supabase/supabase-js": "^3.10.1"
   }
 }
