--- a/mothmanmarket/package.json
+++ b/mothmanmarket/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "@supabase/supabase-js": "latest"
+    "@supabase/supabase-js": "latest",
+    "recharts": "latest"
   }
 }
